Update GH - Using Deep Learning in Python to classify Land Use Land Use Land Cover on Remote Sensing Satellite data.ipynb

--- a/GH - Using Deep Learning in Python to classify Land Use Land Use Land Cover on Remote Sensing Satellite data.ipynb
+++ b/GH - Using Deep Learning in Python to classify Land Use Land Use Land Cover on Remote Sensing Satellite data.ipynb
@@ -10,10 +10,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b1db54f",
+   "id": "776d6b44",
    "metadata": {},
    "source": [
-    "![LULC](images/lulc_sample.png)"
+    "![LULC](../images/lulc_sample.png)\n",
+    "\n",
+    "<!-- ![raster dataframe](../image/dataframe.svg) -->"
    ]
   },
   {
